@@ -17,7 +17,7 @@ $lang = [
     'bitbucket_viewmyi'           => 'View my images',
     'bitbucket_hidemya'           => 'Hide my avatars',
     'bitbucket_maketma'           => 'Make this my Avatar!',
-    'bitbucket_delete'            => '^^Delete this image^^',
+    'bitbucket_delete'            => 'Delete this image',
     'bitbucket_noimages'          => 'No Images Found',
     'bitbucket_upfail'            => 'Upload failed!',
     'bitbucket_to_large'          => 'Sorry, that file is too large for the bit-bucket.',
