@@ -5,22 +5,26 @@ require_once INCL_DIR . 'user_functions.php';
 require_once INCL_DIR . 'bbcode_functions.php';
 require_once INCL_DIR . 'password_functions.php';
 check_user_status();
-global $CURUSER, $site_config, $cache;
+global $CURUSER, $site_config, $cache, $session;
+
+if (!$site_config['bucket_allowed']) {
+    $session->set('is-warning', 'BitBucket has been disabled');
+    header("Location: {$site_config['baseurl']}/index.php");
+    die();
+}
+use Blocktrail\CryptoJSAES\CryptoJSAES;
 
 $lang    = array_merge(load_language('global'), load_language('bitbucket'));
 $HTMLOUT = '';
 
-$SaLt    = 'mE0wI924dsfsfs!@B'; // change this!
-$SaLty   = '8368364562'; // NEW!
-$skey    = 'eTe5$Ybnsccgbsfdsfsw4h6W'; // change this!
+$SaLt    = $site_config['site']['salt'];
+$SaLty   = $site_config['site']['salty'];
+$skey    = $site_config['site']['skey'];
 $maxsize = $site_config['bucket_maxsize'];
 $folders = date('Y/m');
-$formats = [
-    '.gif',
-    '.jpg',
-    '.jpeg',
-    '.png',
-];
+$formats = $site_config['allowed_formats'];
+$str = implode('|', $formats);
+$str = str_replace('.', '', $str);
 
 $bucketdir  = (isset($_POST['avy']) ? AVATAR_DIR : BITBUCKET_DIR . $folders . '/');
 $bucketlink = ((isset($_POST['avy']) || (isset($_GET['images']) && $_GET['images'] == 2)) ? 'avatar/' : $folders . '/');
@@ -37,7 +41,7 @@ if (!isset($_FILES['file'])) {
             stderr($lang['bitbucket_umm'], "{$lang['bitbucket_wayd']}");
         }
         $myfile = BITBUCKET_DIR . $delfile;
-        if ((($pi = pathinfo($myfile)) && preg_match('#^(jpg|jpeg|gif|png)$#i', $pi['extension'])) && is_file($myfile)) {
+        if ((($pi = pathinfo($myfile)) && preg_match('#^(' . $str . ')$#i', $pi['extension'])) && is_file($myfile)) {
             unlink($myfile);
         } else {
             stderr($lang['bitbucket_hey'], "{$lang['bitbucket_imagenf']}");
@@ -73,21 +77,21 @@ if (!isset($_FILES['file'])) {
         <div class='container is-fluid portlet has-text-centered'>
             <form action='{$_SERVER['PHP_SELF']}' method='post' enctype='multipart/form-data'>
                 <div>
-                    <b>{$lang['bitbucket_invalid_extension']}" . join(', ', $formats) . "</b>
+                    <h2>{$lang['bitbucket_invalid_extension']}" . join(', ', $formats) . "</h2>
                 </div>
                 <div>
-                    <b>{$lang['bitbucket_max']}" . mksize($maxsize) . "</b>
+                    <h3>{$lang['bitbucket_max']}" . mksize($maxsize) . "</h3>
                 </div>
                 <div>
-                    {$lang['bitbucket_disclaimer']}
+                    <p>{$lang['bitbucket_disclaimer']}</p>
                 </div>
-                <div>
+                <div class='margin10'>
                     <input type='file' name='file' /></td>
                 </div>
-                <div>
+                <div class='margin10'>
                     <input type='checkbox' name='avy' value='1' />{$lang['bitbucket_tick']}
                 </div>
-                <div>
+                <div class='margin10'>
                     <input class='button is-small' type='submit' value='{$lang['bitbucket_upload']}' />
                 </div>
             </form>
@@ -102,44 +106,82 @@ if (!isset($_FILES['file'])) {
         $year         = (!isset($_GET['year']) ? '&amp;year=' . date('Y') : '&amp;year=' . (int) $_GET['year']);
         $HTMLOUT .= "
             <div>
-                <a href='bitbucket.php?images=2'>{$lang['bitbucket_viewmya']}</a>
+                <ul class='level-center bg-06 padding10'>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=2'>{$lang['bitbucket_viewmya']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php'>{$lang['bitbucket_hideimgs']}</a>
+                    </li>
+                </ul>
             </div>
             <div>
-                <a href='bitbucket.php'>{$lang['bitbucket_hideimgs']}</a>
-            </div>
-            <div>
-                <b>{$lang['bitbucket_previosimg']}</b>
-            </div>
-            <div>
-                <a href='bitbucket.php?images=1&amp;month={$folder_month}&amp;year=" . (isset($_GET['year']) && $_GET['year'] != date('Y') ? date('Y') . "'>This" : (date('Y') - 1) . "'>" . $lang['bitbucket_last'] . '') . ' ' . $lang['bitbucket_year'] . "</a> &#160
-                <a href='bitbucket.php?images=1&amp;month=01{$year}'>{$lang['bitbucket_jan']}</a> &#160;
-                <a href='bitbucket.php?images=1&amp;month=02{$year}'>{$lang['bitbucket_feb']}</a> &#160;
-                <a href='bitbucket.php?images=1&amp;month=03{$year}'>{$lang['bitbucket_mar']}</a> &#160;
-                <a href='bitbucket.php?images=1&amp;month=04{$year}'>{$lang['bitbucket_apr']}</a> &#160;
-                <a href='bitbucket.php?images=1&amp;month=05{$year}'>{$lang['bitbucket_may']}</a> &#160;
-                <a href='bitbucket.php?images=1&amp;month=06{$year}'>{$lang['bitbucket_jun']}</a> &#160;
-                <a href='bitbucket.php?images=1&amp;month=07{$year}'>{$lang['bitbucket_jul']}</a> &#160;
-                <a href='bitbucket.php?images=1&amp;month=08{$year}'>{$lang['bitbucket_aug']}</a> &#160;
-                <a href='bitbucket.php?images=1&amp;month=09{$year}'>{$lang['bitbucket_sep']}</a> &#160;
-                <a href='bitbucket.php?images=1&amp;month=10{$year}'>{$lang['bitbucket_oct']}</a> &#160;
-                <a href='bitbucket.php?images=1&amp;month=11{$year}'>{$lang['bitbucket_nov']}</a> &#160;
-                <a href='bitbucket.php?images=1&amp;month=12{$year}'>{$lang['bitbucket_dec']}</a> &#160;
+                <h2>{$lang['bitbucket_previosimg']}</h2>
+                <ul class='level-center bg-06 padding10'>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month={$folder_month}&amp;year=" . (isset($_GET['year']) && $_GET['year'] != date('Y') ? date('Y') . "'>This" : (date('Y') - 1) . "'>" . $lang['bitbucket_last'] . '') . ' ' . $lang['bitbucket_year'] . "</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=01{$year}'>{$lang['bitbucket_jan']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=02{$year}'>{$lang['bitbucket_feb']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=03{$year}'>{$lang['bitbucket_mar']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=04{$year}'>{$lang['bitbucket_apr']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=05{$year}'>{$lang['bitbucket_may']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=06{$year}'>{$lang['bitbucket_jun']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=07{$year}'>{$lang['bitbucket_jul']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=08{$year}'>{$lang['bitbucket_aug']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=09{$year}'>{$lang['bitbucket_sep']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=10{$year}'>{$lang['bitbucket_oct']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=11{$year}'>{$lang['bitbucket_nov']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1&amp;month=12{$year}'>{$lang['bitbucket_dec']}</a>
+                    </li>
+                </ul>
             </div>";
     } elseif (isset($_GET['images']) && $_GET['images'] == 2) {
         $HTMLOUT .= "
             <div>
-                <a href='{$site_config['baseurl']}/bitbucket.php?images=1'>{$lang['bitbucket_viewmonths']}</a>
-            </div>
-            <div>
-                <a href='{$site_config['baseurl']}/bitbucket.php'>{$lang['bitbucket_hidemya']}</a>
+                <ul class='level-center bg-06 padding10'>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1'>{$lang['bitbucket_viewmonths']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php'>{$lang['bitbucket_hidemya']}</a>
+                    </li>
+                </ul>
             </div>";
     } else {
         $HTMLOUT .= "
             <div>
-                <a href='{$site_config['baseurl']}/bitbucket.php?images=1'>{$lang['bitbucket_viewmonths']}</a>
-            </div>
-            <div>
-                <a href='{$site_config['baseurl']}/bitbucket.php?images=2'>{$lang['bitbucket_viewmya']}</a>
+                <ul class='level-center bg-06 padding10'>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1'>{$lang['bitbucket_viewmonths']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=2'>{$lang['bitbucket_viewmya']}</a>
+                    </li>
+                </ul>
             </div>";
     }
     if (isset($_GET['images'])) {
@@ -154,24 +196,28 @@ if (!isset($_FILES['file'])) {
                 $eid               = md5($filename);
                 $HTMLOUT .= "
             <div class='bitbucket'>
-                <div>
+                <div class='margin20'>
                     <a href='{$site_config['baseurl']}/img.php?{$filename}'>
-                        <img src='{$site_config['baseurl']}/img.php?{$filename}' width='200' alt='' />
+                        <img src='{$site_config['baseurl']}/img.php?{$filename}' width='50%' height='auto' alt='' />
                     </a>
                 </div>
-                <div>{$lang['bitbucket_directlink']}</div>
-                <div>
+                <h3>{$lang['bitbucket_directlink']}</h3>
+                <div class='bottom10'>
                     <input id='d{$eid}d' onclick=\"SelectAll('d{$eid}d');\" type='text' size='70' value='{$site_config['baseurl']}/img.php?{$filename}' readonly='readonly' />
                 </div>
-                <div>{$lang['bitbucket_tags']}</div>
-                <div>
+                <h3>{$lang['bitbucket_tags']}</h3>
+                <div class='bottom10'>
                     <input id='t{$eid}t' onclick=\"SelectAll('t{$eid}t');\" type='text' size='70' value='[img]{$site_config['baseurl']}/img.php?{$filename}[/img]' readonly='readonly' />
                 </div>
                 <div>
-                    <a href='{$site_config['baseurl']}/bitbucket.php?type=" . ((isset($_GET['images']) && $_GET['images'] == 2) ? '2' : '1') . "&amp;avatar={$site_config['baseurl']}/img.php?{$filename}'>{$lang['bitbucket_maketma']}</a>
-                </div>
-                <div>
-                    <a href='{$site_config['baseurl']}/bitbucket.php?type=" . ((isset($_GET['images']) && $_GET['images'] == 2) ? '2' : '1') . '&amp;delete=' . $encryptedfilename . '&amp;delhash=' . md5($filename . $USERSALT . $SaLt) . '&amp;month=' . (!isset($_GET['month']) ? date('m') : ($_GET['month'] < 10 ? '0' : '') . (int)$_GET['month']) . '&amp;year=' . (!isset($_GET['year']) ? date('Y') : (int)$_GET['year']) . "'>{$lang['bitbucket_delete']}</a>
+                    <ul class='level-center bg-06 padding10'>
+                        <li>
+                            <a href='{$site_config['baseurl']}/bitbucket.php?type=" . ((isset($_GET['images']) && $_GET['images'] == 2) ? '2' : '1') . "&amp;avatar={$site_config['baseurl']}/img.php?{$filename}'>{$lang['bitbucket_maketma']}</a>
+                        </li>
+                        <li>
+                            <a href='{$site_config['baseurl']}/bitbucket.php?type=" . ((isset($_GET['images']) && $_GET['images'] == 2) ? '2' : '1') . '&amp;delete=' . $encryptedfilename . '&amp;delhash=' . md5($filename . $USERSALT . $SaLt) . '&amp;month=' . (!isset($_GET['month']) ? date('m') : ($_GET['month'] < 10 ? '0' : '') . (int)$_GET['month']) . '&amp;year=' . (!isset($_GET['year']) ? date('Y') : (int)$_GET['year']) . "'>{$lang['bitbucket_delete']}</a>
+                        </li>
+                    </ul>
                 </div>
             </div>";
             } else {
@@ -231,35 +277,39 @@ if (!file_exists($path)) {
 if (isset($_POST['from']) && $_POST['from'] === 'upload') {
     echo "
         <div>
-            <b><font color='red'>{$lang['bitbucket_success']}</b>
+            {$lang['bitbucket_success']}
         </div>
         <div>
-            <b><strong>{$site_config['baseurl']}/img.php?{$pathlink}</strong></font></b>
+            {$site_config['baseurl']}/img.php?{$pathlink}
         </div>";
     die();
 }
 $HTMLOUT .= "
         <div class='bitbucket has-text-centered'>
             <div>
-                <a href='{$_SERVER['PHP_SELF']}'><strong>{$lang['bitbucket_up_another']}</strong></a>
+                <a href='{$_SERVER['PHP_SELF']}' class='button is-small bottom10'>{$lang['bitbucket_up_another']}</a>
             </div>
-            <div>{$lang['bitbucket_thefile']}</div>
+            <h3 class='has-text-lime'>{$lang['bitbucket_thefile']}</h3>
             <div>
-                <img src='{$site_config['baseurl']}/img.php?{$pathlink}' width='200' alt='' />
+                <img src='{$site_config['baseurl']}/img.php?{$pathlink}' width='50%' height='auto' alt='' />
             </div>
-            <div>{$lang['bitbucket_directlink']}</div>
-            <div>
+            <h3>{$lang['bitbucket_directlink']}</h3>
+            <div class='bottom10'>
                 <input id='direct' onclick=\"SelectAll('direct');\" type='text' size='70' value='{$site_config['baseurl']}/img.php?{$pathlink}' readonly='readonly' />
             </div>
-            <div>{$lang['bitbucket_tags']}</div>
-            <div>
+            <h3>{$lang['bitbucket_tags']}</h3>
+            <div class='bottom10'>
                 <input id='tag' onclick=\"SelectAll('tag');\" type='text' size='70' value='[img]{$site_config['baseurl']}/img.php?{$pathlink}[/img]' readonly='readonly' />
             </div>
             <div>
-                <a href='{$site_config['baseurl']}/bitbucket.php?images=1'>{$lang['bitbucket_viewmyi']}</a>
-            </div>
-            <div>
-                <a href='{$site_config['baseurl']}/bitbucket.php?images=2'>{$lang['bitbucket_viewmya']}</a>
+                <ul class='level-center bg-06 padding10'>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=1'>{$lang['bitbucket_viewmyi']}</a>
+                    </li>
+                    <li>
+                        <a href='{$site_config['baseurl']}/bitbucket.php?images=2'>{$lang['bitbucket_viewmya']}</a>
+                    </li>
+                </ul>
             </div>
             <script>
                 function SelectAll(id) {
@@ -279,7 +329,8 @@ function encrypt($text)
 {
     global $PICSALT;
 
-    return trim(base64_encode(mcrypt_encrypt(MCRYPT_RIJNDAEL_256, str_pad($PICSALT, 32), $text, MCRYPT_MODE_ECB, mcrypt_create_iv(mcrypt_get_iv_size(MCRYPT_RIJNDAEL_256, MCRYPT_MODE_ECB), MCRYPT_RAND))));
+    $encrypted = CryptoJSAES::encrypt($text, $PICSALT);
+    return base64_encode($encrypted);
 }
 
 /**
@@ -291,7 +342,8 @@ function decrypt($text)
 {
     global $PICSALT;
 
-    return trim(mcrypt_decrypt(MCRYPT_RIJNDAEL_256, str_pad($PICSALT, 32), base64_decode($text), MCRYPT_MODE_ECB, mcrypt_create_iv(mcrypt_get_iv_size(MCRYPT_RIJNDAEL_256, MCRYPT_MODE_ECB), MCRYPT_RAND)));
+    $str = base64_decode($text);
+    return CryptoJSAES::decrypt($str, $PICSALT);
 }
 
 /**
